meon/tests/ui/fail/no_body.rs
use meon::define_parser;

define_parser!(Demo);

fn main() {}
