meon/tests/ui/fail/no_body.stderr
error: expected group Brace (parser body), got None
 --> tests/ui/fail/no_body.rs:3:16
  |
3 | define_parser!(Demo);
  |                ^^^^
